Bug 160028 - Type to select currency in split button dropdown does not work for gtk3
Summary: Type to select currency in split button dropdown does not work for gtk3
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0 target:24.2.3
Keywords: bibisected, bisected, implementationError
Depends on:
Blocks: GTK3 Split-Group-Buttons Calc-Toolbars
  Show dependency treegraph
 
Reported: 2024-03-04 13:08 UTC by Timur
Modified: 2024-04-02 05:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2024-03-04 13:08:30 UTC
In Calc, there is currency dropdown.
When opened, we can type and see that, but not clear what it does, as that does not seem applied or used. At least in GTK3.
If we type currency and press Enter, it should be selected and applied to the cell.
That is for single selected currency, while multiple entries with the same name like EUR should be bug 154538.
Comment 1 Stéphane Guillou (stragu) 2024-03-21 05:57:01 UTC
Reproduced:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 53c5d570cab036b23f4969b858a648c8f0c24f93
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

This is actually a gtk3-specific bug:
- When in the sidebar, typing opens the search/filter overlay but it has no effect. (Unlike e.g. the Styles deck, where such overlay works to jump to an item.)
- with gen, kf5 and win VCL plugins, it is possible to jump to an item by typing (both in sidebar and toolbar)

In 5.2, when the widget was added, and up to 6.4, typing would jump to the correct item but would apply it directly and close the widget, for both gtk2/3 and gen.

In 7.0, it works as expected for gen but doesn't for gtk3.

Version: 7.0.0.3
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Bibisecting with linux-64-7.0, the sidebar's split button has the non-functional search field popup since:

commit b199e335c01f265ba2604c020928b63356b42d15
author	Caolán McNamara 	Fri Dec 27 17:18:44 2019 +0000
committer	Caolán McNamara 	Wed Jan 01 13:19:28 2020 +0100
weld NumberFormatPropertyPanel
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/85873

And the same was added to the toolbar with:

commit bb362ca226a0089a1b036366e9ffc45ab5c90d8d
author	Caolán McNamara 	Wed Jan 08 13:15:29 2020 +0000
committer	Caolán McNamara 	Thu Jan 09 10:17:34 2020 +0100
use welded CurrencyList dropdown in all toolbars
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/86434

Caolán, could the gtk search be made functional for CurrencyList?
Comment 2 Caolán McNamara 2024-03-29 16:48:22 UTC
gtk's search is defeated by the use of ApplyLreOrRleEmbedding which sticks (hidden to the human) extra RTL/LTR directional characters at the start of the strings
Comment 3 Commit Notification 2024-03-29 19:31:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e94c6761260ae30f1e4b91d65f8a5493dc8a3140

Resolves: tdf#160028 Type to select currency in dropdown does not work for gtk

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2024-03-29 19:32:40 UTC
done in trunk, backport to 24-2 in gerrit
Comment 5 Commit Notification 2024-03-30 15:09:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/be5f10efe541062cf7ea64ff97d649e92f3f50ca

Resolves: tdf#160028 Type to select currency in dropdown does not work for gtk

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2024-04-02 05:09:57 UTC
Thanks Caolán, fix verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 069bf61cea5e3aea07ffd5a1bb9f55324651cb35
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded