Resolves: tdf#160028 Type to select currency in dropdown does not work for gtk

LibreOffice embeds RTL/LTR direction markers in currency strings, which
defeats the default gtk search mechanism, so switch in our one instead.

Change-Id: Ia118f8c8e27103c21955683f8a2fd3c17c2b2098
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165477
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>